very simple Counter program using javascript

--- a/index.html
+++ b/index.html
@@ -17,14 +17,24 @@
     <p id="p2"> </p>2
     <p id="p3"> </p> -->
 
-    <label id=" aLabel"> Side A:</label><br>
+    <!-- Exercise: Hypotenuse calc practice program; -->
+    <!-- <label id=" aLabel"> Side A:</label><br>
     <input type="text" id="aTextBox"><br>
 
     <label id=" bLabel"> Side B:</label><br>
     <input type="text" id="bTextBox"><br>
     <button type="button" id="submitButton"> submit</button><br>
 
-    <label id="cLabel"></label><br>
+    <label id="cLabel"></label><br> -->
+    
+    <!-- Exercise: Counter Program: -->
+    <label id="countLabel">0</label><br>
+
+    <button id="decreaseBtn"> decrease</button>
+    <button id="resetBtn"> reset</button>
+    <button id="increaseBtn"> increase</button>
+
+
     
 
 <script src="./index.js"> </script>
