random number generator

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     <label id="cLabel"></label><br> -->
     
     <!-- Exercise: Counter Program: -->
-<div id="counterDiv"> 
+<!-- <div id="counterDiv"> 
     <label id="countLabel">0</label><br>
 
     <button id="decreaseBtn"> decrease</button>
     <button id="resetBtn"> reset</button>
     <button id="increaseBtn"> increase</button>
-</div>
+</div> -->
 
 
     
