roll a dice exercise

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
 </div> -->
 
 
+<!-- //Exercise: Random Number generator -->
+
+<label id="xlabel"></label><br>
+    <label id="ylabel"></label><br>
+    <label id="zlabel"></label><br>
+    <button type="button" id="rollButton">roll</button>
     
 
 <script src="./index.js"> </script>
