--- a/index.html
+++ b/index.html
@@ -39,10 +39,14 @@
 
 <!-- //Exercise: Random Number generator -->
 
-<label id="xlabel"></label><br>
+
+<label id="alabel"></label><br>
+<button type="button" id="rollButton"> roll</button>
+
+<!-- <label id="xlabel"></label><br>
     <label id="ylabel"></label><br>
     <label id="zlabel"></label><br>
-    <button type="button" id="rollButton">roll</button>
+    <button type="button" id="rollButton">roll</button> -->
     
 
 <script src="./index.js"> </script>
