string properties and methods done!

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 <!-- //Exercise: Random Number generator -->
 
 
-<label id="alabel"></label><br>
-<button type="button" id="rollButton"> roll</button>
+<!-- <label id="alabel"></label><br>
+<button type="button" id="rollButton"> roll</button> -->
 
 <!-- <label id="xlabel"></label><br>
     <label id="ylabel"></label><br>
