Checkbox property  simple exercise

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
     <button type="button" id="rollButton">roll</button> -->
     
 
+    <!-- checked property exercise!!-->
+    <label for="myCheckBox"> subscribe</label>
+    <input type="checkbox" id="myCheckBox"><br>
+    <button id="myButton"> submit</button>
 <script src="./index.js"> </script>
 </body>
 </html>
