checked property exercise 2 done!!!

--- a/index.html
+++ b/index.html
@@ -49,10 +49,29 @@
     <button type="button" id="rollButton">roll</button> -->
     
 
-    <!-- checked property exercise!!-->
-    <label for="myCheckBox"> subscribe</label>
+    <!-- checked property exercise 1!!-->
+    <!-- <label for="myCheckBox"> subscribe</label>
     <input type="checkbox" id="myCheckBox"><br>
-    <button id="myButton"> submit</button>
+    <button id="myButton"> submit</button> -->
+
+
+    <!-- checked property exercise 2!!-->
+
+    <label for="myCheckBox">subscribe</label>
+    <input type="checkbox" id="myCheckBox"><br>
+    
+    <label for="visaBtn">visa</label>
+    <input type="radio" name="card" id="visaBtn">
+
+    <label for="mastercardBtn">Mastercard</label>
+    <input type="radio" name="card" id="mastercardBtn">
+
+    <label for="paypalBtn">Paypal</label>
+    <input type="radio" name="card" id="paypalBtn"><br>
+
+    <button id="myButton">submit</button>
+
+
 <script src="./index.js"> </script>
 </body>
 </html>
