--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <button type="button" id="rollButton"> roll</button> -->
 
 <!-- <label id="xlabel"></label><br>
-    <label id="ylabel"></label><br>
+    <label id="ylabel"></label><br> 
     <label id="zlabel"></label><br>
     <button type="button" id="rollButton">roll</button> -->
     
@@ -52,12 +52,12 @@
     <!-- checked property exercise 1!!-->
     <!-- <label for="myCheckBox"> subscribe</label>
     <input type="checkbox" id="myCheckBox"><br>
-    <button id="myButton"> submit</button> -->
+    <button id="myButton"> submit</button>  -->
 
 
     <!-- checked property exercise 2!!-->
 
-    <label for="myCheckBox">subscribe</label>
+    <!-- <label for="myCheckBox">subscribe</label>
     <input type="checkbox" id="myCheckBox"><br>
     
     <label for="visaBtn">visa</label>
@@ -69,7 +69,7 @@
     <label for="paypalBtn">Paypal</label>
     <input type="radio" name="card" id="paypalBtn"><br>
 
-    <button id="myButton">submit</button>
+    <button id="myButton">submit</button> -->
 
 
 <script src="./index.js"> </script>
