--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
 
     <button id="myButton">submit</button> -->
 
+    <!-- Nested loop example exercise: -->
+    <label id="myRectangle"></label>
+
 
 <script src="./index.js"> </script>
 </body>
