--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <button id="myButton">submit</button> -->
 
     <!-- Nested loop example exercise: -->
-    <label id="myRectangle"></label>
+    <!-- <label id="myRectangle"></label> -->
 
 
 <script src="./index.js"> </script>
