--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
     <!-- <label id="myRectangle"></label> -->
 
 
+    <!-- template literals example -->
+    <label id = myLabel></label>
+
 <script src="./index.js"> </script>
 </body>
 </html>
