--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
     <!-- template literals example -->
-    <label id = myLabel></label>
+   <!--  <label id = myLabel></label> -->
 
 <script src="./index.js"> </script>
 </body>
