Very basic number guessing game in javascript started

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
     <!-- template literals example -->
    <!--  <label id = myLabel></label> -->
 
+
+   <!-- Very basic number guessing game -->
+
+   
 <script src="./index.js"> </script>
 </body>
 </html>
