--- a/index.html
+++ b/index.html
@@ -81,12 +81,14 @@
 
    <!-- Very basic number guessing game -->
 
-   <h1>Number Guessing Game</h1>
+   <!-- <h1>Number Guessing Game</h1>
    <p>Pick a # between 1 - 10</p>
    <label>Enter a guess</label>
 
    <input id="guessField">
-   <input type="submit" id="submitButton">
+   <input type="submit" id="submitButton"> -->
+
+   
 <script src="./index.js"> </script>
 </body>
 </html>
