Temperature conversion program done!

--- a/index.html
+++ b/index.html
@@ -88,7 +88,35 @@
    <input id="guessField">
    <input type="submit" id="submitButton"> -->
 
-   
+
+   <!-- //Temperature conversion program -->
+
+   <!-- <label>Enter a temperature:</label><br>
+   <input type="text" id="textBox"> <br>
+
+   <label>convert to:</label><br>
+   <input type="radio" id="cButton" name = "unit">
+   <label>Celsius</label><br>
+
+   <input type="radio" id="fButton" name = "unit">
+   <label>Fahrenheit</label><br>
+
+   <button type="button" id="submitButton">submit</button><br>
+
+   <label id="tempLabel"></label> -->
+
+   <!-- BMI calculator -->
+
+   <label>Enter your weight: </label><br>
+   <input type="text" id="wTextbox"><br>
+
+   <label>Enter your height: </label><br>
+   <input type="text" id="hTextbox"><br>
+   <br>
+   <button id="submitBtn">Submit</button>
+
+   <label id="bmiLabel"></label>
+
 <script src="./index.js"> </script>
 </body>
 </html>
