BMI calculator done

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
    <label>Enter your height: </label><br>
    <input type="text" id="hTextbox"><br>
    <br>
-   <button id="submitBtn">Submit</button>
+   <button id="submitBtn">Submit</button><br>
 
-   <label id="bmiLabel"></label>
+   <label id="bmiLabel"></label><br>
 
 <script src="./index.js"> </script>
 </body>
