--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
    <!-- BMI calculator -->
 
-   <label>Enter your weight: </label><br>
+   <!-- <label>Enter your weight: </label><br>
    <input type="text" id="wTextbox"><br>
 
    <label>Enter your height: </label><br>
@@ -115,7 +115,7 @@
    <br>
    <button id="submitBtn">Submit</button><br>
 
-   <label id="bmiLabel"></label><br>
+   <label id="bmiLabel"></label><br> -->
 
 <script src="./index.js"> </script>
 </body>
